// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Slider Mobile 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="slider-container"
  >
    
    
    <div
      class="fd-slider fd-slider--lg"
    >
      
        
      <div
        class="fd-slider__inner"
      >
        
            
        <div
          aria-label="slider"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="50"
          class="fd-slider__handle fd-slider__handle--lg"
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
        
            
        <div
          class="fd-slider__track"
        >
          
                
          <div
            class="fd-slider__track-range"
            style="width: 50%;"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Slider Range 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="slider-container slider-container--range"
  >
    
    
    <div
      class="fd-slider fd-slider--range"
    >
      
        
      <div
        class="fd-slider__inner"
      >
        
            
        <div
          aria-label="range slider left"
          aria-valuemax="80"
          aria-valuemin="1"
          aria-valuenow="40"
          class="fd-slider__handle"
          role="slider"
          style="left: 40%;"
          tabindex="0"
        />
        
            
        <div
          aria-label="range slider right"
          aria-valuemax="100"
          aria-valuemin="40"
          aria-valuenow="80"
          class="fd-slider__handle"
          role="slider"
          style="left: 80%;"
          tabindex="0"
        />
        
            
        <div
          class="fd-slider__track"
        >
          
                
          <div
            class="fd-slider__track-range"
            style="width: 40%"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Slider Standard 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="slider-container"
  >
    
    
    <div
      class="fd-slider"
    >
      
        
      <div
        class="fd-slider__inner"
      >
        
        
        <div
          aria-label="slider"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="50"
          class="fd-slider__handle"
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
        
            
        <div
          class="fd-slider__track"
        >
          
                
          <div
            class="fd-slider__track-range"
            style="width: 50%;"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Slider Ticks 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="slider-container"
  >
    
    
    <div
      class="fd-slider"
    >
      
        
      <div
        class="fd-slider__inner"
      >
        
            
        <div
          aria-label="slider with ticks"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="50"
          class="fd-slider__handle"
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
        
            
        <div
          class="fd-slider__track"
        >
          
                
          <div
            class="fd-slider__track-range"
            style="width: 50%;"
          />
          
            
        </div>
        
            
        <div
          class="fd-slider__tick-wrapper"
        >
          
                
          <div
            class="fd-slider__ticks"
          >
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Slider Ticks and labels 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="slider-container"
  >
    
    
    <div
      class="fd-slider"
    >
      
        
      <div
        class="fd-slider__inner"
      >
        
            
        <div
          aria-label="slider with ticks and labels"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="50"
          class="fd-slider__handle"
          role="slider"
          style="left: 50%;"
          tabindex="0"
        />
        
            
        <div
          class="fd-slider__track"
        >
          
                
          <div
            class="fd-slider__track-range"
            style="width: 50%;"
          />
          
            
        </div>
        
            
        <div
          class="fd-slider__tick-wrapper"
        >
          
                
          <div
            class="fd-slider__ticks"
          >
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick fd-slider__tick--in-range"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                    
            <div
              class="fd-slider__tick"
            />
            
                
          </div>
          
                
          <div
            class="fd-slider__labels"
          >
            
                    
            <div
              class="fd-slider__label"
            >
              0
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              10
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              20
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              30
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              40
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              50
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              60
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              70
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              80
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              90
            </div>
            
                    
            <div
              class="fd-slider__label"
            >
              100
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;
